<resources>
    <string name="app_name">BookFast</string>
    <string name="logo_do_aplicativo">Logo BookFast</string>
    <string name="como_podemos_te_chamar">Como podemos te chamar?</string>
    <string name="digite_seu_nome">Digite seu nome:</string>
    <string name="proximo">Próximo</string>
    <string name="prev"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="aquisicoes">Novas aquisições:</string>
    <string name="pesquisa_cientifica">Pesquisa Científica:</string>
    <string name="abrir_pesquisa">Abrir pesquisa</string>
    <string name="pesquisar">Pesquisar...</string>
    <string name="filtro_livros_selecionados">Selecionados</string>
    <string name="filtro_livros_reservados">Reservados</string>
    <string name="btn_reservar">Reservar</string>
    <string name="capa_fortaleza">Capa Fortaleza</string>
    <string name="selecionar">Selecionar</string>
    <string name="macedo_miguel">Macedo, Miguel</string>
    <string name="autor">Autor:</string>
    <string name="login">Login</string>
    <string name="ainda_n_o_possui_uma_conta">Ainda não possui uma conta?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="digite_sua_senha">Digite sua senha:</string>
    <string name="digite_seu_email">Digite seu email:</string>
    <string name="ol_acesse_sua_conta">Olá, acesse sua conta</string>
    <string name="logo_bookfast">Logo BookFast</string>
    <string name="fortaleza_em_300_palavras">Fortaleza em 300 palavras</string>
    <string name="detalhes">Detalhes</string>
    <string name="favoritar">Favoritar</string>
    <string name="botao_referencia">Referência</string>
    <string name="material_livro">Material: Livro</string>
    <string name="idioma_portugu_s">Idioma: Português</string>
    <string name="publica_o_s_o_paulo_edi_es_exemplo_2007">Publicação: São Paulo : Edições Exemplo, 2007.</string>
    <string name="edi_o_3_ed">Edição: 3, ed.</string>
    <string name="s_rie_exemplo_3">Série: (Exemplo; 3)</string>
    <string name="assuntos_exemplos">Assuntos: Exemplos</string>
    <string name="autoria">Autoria:</string>
    <string name="registro_123456">Registro: 123456</string>
    <string name="edi_o_3">Edição: 3</string>
    <string name="ano_2007">Ano: 2007</string>
    <string name="suporte_impresso">Suporte: Impresso</string>
    <string name="localiza_o_1234_biblioteca_coordena_o_livros">Localização: 1234 - Biblioteca - Coordenação - Livros</string>
    <string name="situa_o_cativo">Situação: Cativo</string>
    <string name="situacao_Disponivel">Situação: Disponível</string>
    <string name="n_mero_de_exemplares_2">Número de exemplares: 2</string>
    <string name="exemplares">Exemplares:</string>
    <string name="referencia">AUTOR, Nome. Título da obra : subtítulo ilustrativo. Tradução de Tradutor Um, Tradutor Dois, Tradutor Três. 1. ed. Cidade: Editora Exemplo, 2000. (Coleção Exemplo, 1). ISBN 000-00-00000-000-0.</string>
    <string name="adicionar_capa">Adicionar Capa</string>
    <string name="adicione_um_t_tulo">Adicione um título:</string>
    <string name="detalhesMention">Detalhes:</string>
    <string name="material">Material:</string>
    <string name="idioma">Idioma:</string>
    <string name="publica_o">Publicação:</string>
    <string name="edi_o">Edição:</string>
    <string name="s_rie">Série:</string>
    <string name="assuntos">Assuntos:</string>
    <string name="autoriaForms">Autoria:</string>
    <string name="informe_a_refer_ncia">Informe a referência:</string>
    <string name="enviar">Enviar</string>
    <string name="refer_ncia">Referência</string>
    <string name="editar">Editar</string>
    <string name="registrar_se">Registrar-se</string>
    <string name="bem_vindo">Bem vindo!</string>
    <string name="ja_possui_uma_conta">Já possui uma conta?</string>
    <string name="n_o_quero_criar_uma">Não, quero criar uma</string>
    <string name="sim">Sim</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="atualize_as_informa_es_da_sua_conta">Atualize as informações da sua conta</string>
    <string name="nome_de_usu_rio">Nome de usuário</string>
    <string name="o_nome_ser_exibido_para_outros_usu_rios">O nome será exibido para outros usuários.</string>
    <string name="salvar_altera_es">Salvar alterações</string>
    <string name="voltar">Voltar</string>
    <string name="copiar_refer_ncia">Copiar referência</string>
    <string name="buscar_livros">Buscar livros</string>
    <string name="entrar_na_fila">Entrar na fila</string>
    <string name="sousa_santos">Sousa, Santos</string>
    <string name="um_discurso_sobre_as_ci_ncias">Um discurso sobre as ciências</string>
    <string name="indispon_veis">Indisponíveis:</string>
    <string name="reservar_todos">Reservar todos</string>
    <string name="dispon_veis">Disponíveis:</string>
    <string name="reservas">Reservas</string>
    <string name="selecionado">Selecionado</string>
    <string name="dispon_vel_20_05_26">Disponível 20/05/26</string>
    <string name="vencimento">Vencimento</string>
    <string name="_20_05_26">20/05/26</string>
    <string name="renovar">Renovar</string>
    <string name="fila_de_espera">Fila de espera</string>
    <string name="_1_3">1/3</string>
    <string name="dispon_vel_20_01_27">Disponível: 20/01/27</string>
    <string name="alugados">Alugados</string>
    <string name="_1_10">1/10</string>
    <string name="metodologia_cient_fica_na_era_digital">Metodologia científica na era digital</string>
    <string name="vencido">VENCIDO</string>
    <string name="desde_01_05_26">Desde: 01/05/26</string>
    <string name="r_3_00">R$ 3,00</string>
    <string name="valor_total_de_multas">Valor total de multas</string>
    <string name="sair_da_fila">Sair da fila</string>
    <string name="multas_e_vencimentos">Multas e vencimentos</string>
    <string name="sobre_o_aplicativo">Sobre o aplicativo</string>
    <string name="sair">Sair</string>
    <string name="usuario_email_com">usuario@email.com</string>
    <string name="usu_rio">(Usuário)</string>
    <string name="configura_es">Configurações</string>
    <string name="livros_favoritos">Livros Favoritos</string>
    <string name="sherlock_holmes">Sherlock Holmes</string>
    <string name="arthur_c_doyle">Arthur C. Doyle</string>
    <string name="got_asofai">GoT: ASoFaI</string>
    <string name="g_r_r_martin">G. R. R. Martin</string>
    <string name="the_witcher">The Witcher</string>
    <string name="andrzej_sapkowski">Andrzej Sapkowski</string>
    <string name="remover">✕ Remover</string>
    <string name="toque_no_x_para_remover_um_livro_dos_favoritos">Toque no X para remover um livro dos favoritos</string>
    <string name="editar_favoritos">Editar favoritos</string>
    <string name="digite_seu_nome_de_usu_rio">Digite seu nome de usuário</string>
    <string name="o_aplicativo_bookfast_uma_ferramenta_para_controlar_e_consultar_a_biblioteca_da_unifor">O aplicativo BookFast é uma ferramenta para controlar e consultar a biblioteca da Unifor</string>
    <string name="vers_o_1_0_0">Versão 1.0.0</string>
    <string name="como_elaborar_projetos_de_pesquisa">Como elaborar projetos de pesquisa</string>
</resources>