<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AboutPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242424"
    tools:context=".BookpageActivity">

    <!-- HEADER FIXO -->
    <include
        android:id="@+id/headerInclude"
        layout="@layout/component_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- FOOTER FIXO -->
    <include
        android:id="@+id/componentFooter"
        layout="@layout/component_footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- SCROLL -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerInclude">

        <!-- CONTEÚDO -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/capaFortaleza"
                android:layout_width="188dp"
                android:layout_height="178dp"
                android:layout_marginTop="32dp"
                android:scaleType="fitCenter"
                android:src="@drawable/fortaleza_300"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tituloLivroId"
                android:layout_width="212dp"
                android:layout_height="83dp"
                android:layout_marginTop="32dp"
                android:text="@string/fortaleza_em_300_palavras"
                android:textAlignment="center"
                android:textColor="#F2F0F0"
                android:textSize="24sp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/autorCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/autor"
                android:textColor="#F4F1F1"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.528"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tituloLivroId" />

            <TextView
                android:id="@+id/autorId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/macedo_miguel"
                android:textColor="#F4F1F1"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.631"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/autorCat" />

            <Button
                android:id="@+id/btnSelecionar"
                android:layout_width="208dp"
                android:layout_height="48dp"
                android:layout_marginTop="28dp"
                android:backgroundTint="#19A1E4"
                android:text="@string/selecionar"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/capaFortaleza" />

            <Button
                android:id="@+id/btnFavoritar"
                android:layout_width="208dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#19A1E4"
                android:text="@string/favoritar"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSelecionar" />

            <Button
                android:id="@+id/btnDetalhes"
                android:layout_width="118dp"
                android:layout_height="37dp"
                android:layout_marginStart="76dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#0F0E0E"
                app:cornerRadius="2dp"
                android:text="@string/detalhes"
                app:layout_constraintEnd_toStartOf="@+id/btnReferencia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnFavoritar" />

            <Button
                android:id="@+id/btnReferencia"
                android:layout_width="118dp"
                android:layout_height="37dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="96dp"
                android:backgroundTint="#434343"
                app:cornerRadius="2dp"
                android:text="@string/refer_ncia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnFavoritar" />

            <TextView
                android:id="@+id/lbexemplaresId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="312dp"
                android:text="@string/exemplares"

                android:textColor="#F0F0F0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnDetalhes" />

            <TextView
                android:id="@+id/lbNExemplaresId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/n_mero_de_exemplares_2"

                android:textColor="#F0F0F0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbexemplaresId" />

            <include
                android:id="@+id/componentDescricao"
                layout="@layout/component_descricao"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbNExemplaresId" />

            <include
                android:id="@+id/componentExemplares"
                layout="@layout/component_exemplares"
                android:layout_marginBottom="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/componentDescricao" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>