<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="300dp"
        android:layout_marginTop="765dp"
        android:background="@drawable/bg_container_exemplares"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbRegistroCativoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:text="@string/registro_123456"
                android:textColor="#f0f0f0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lbEdicaoCativoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="8dp"
                android:text="@string/edi_o_3"
                android:textColor="#f0f0f0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lbAnoCativoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="8dp"
                android:text="@string/ano_2007"
                android:textColor="#f0f0f0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lbSuporteCativoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="8dp"
                android:text="@string/suporte_impresso"
                android:textColor="#f0f0f0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lbLocalizacaoCativoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="8dp"
                android:text="@string/localiza_o_1234_biblioteca_coordena_o_livros"
                android:textColor="#f0f0f0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lbSituacaoCativoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="8dp"
                android:text="@string/situa_o_cativo"
                android:textColor="#f0f0f0"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/bg_container_exemplares"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbRegistroId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:text="@string/registro_123456"
                android:textColor="#f0f0f0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lbEdicaoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="8dp"
                android:text="@string/edi_o_3"
                android:textColor="#f0f0f0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lbAnoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="8dp"
                android:text="@string/ano_2007"
                android:textColor="#f0f0f0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lbSuporteId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="8dp"
                android:text="@string/suporte_impresso"
                android:textColor="#f0f0f0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lbLocalizacaoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="8dp"
                android:text="@string/localiza_o_1234_biblioteca_coordena_o_livros"
                android:textColor="#f0f0f0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lbSituacaoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="8dp"
                android:text="@string/situacao_Disponivel"
                android:textColor="#f0f0f0"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>